--- a/FRONT/linkedOut/package.json
+++ b/FRONT/linkedOut/package.json
@@ -9,13 +9,20 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
-    "expo": "~52.0.25",
+    "expo": "~52.0.29",
     "expo-constants": "~17.0.5",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "~16.0.4",
@@ -24,12 +31,13 @@
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.22.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
