--- a/FRONT/linkedOut/package.json
+++ b/FRONT/linkedOut/package.json
@@ -24,18 +24,21 @@
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.29",
     "expo-constants": "~17.0.5",
-    "expo-image-manipulator": "^13.0.6",
+    "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.4",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
     "typescript": "^5.3.3"
   },
@@ -43,7 +46,9 @@
     "@babel/core": "^7.25.2",
     "@types/firebase": "^2.4.32",
     "@types/react": "~18.3.12",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
+    "expo-module-scripts": "^4.0.3",
     "typescript": "^5.3.3"
   },
   "private": true
