--- a/FRONT/linkedOut/package.json
+++ b/FRONT/linkedOut/package.json
@@ -17,29 +17,35 @@
     }
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.7",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/viewpager": "^5.0.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "~52.0.29",
     "expo-constants": "~17.0.5",
     "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.2.0",
     "moment": "^2.30.1",
-    "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react": "^18.3.1",
+    "react-native": "0.76.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-picker": "^7.2.3",
+    "react-native-pager-view": "^6.7.0",
     "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-test-renderer": "^18.3.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
